--- a/src/app/explore/explore.component.html
+++ b/src/app/explore/explore.component.html
@@ -67,7 +67,12 @@
 </ul>
 
 <div class="tab-content" id="myTabContent" style="padding: 10px 50px 0px; margin: 0px 70px;">
-    <br><br>
+    <br>
+    <div class="form-group has-search">
+        <span class="fa fa-search form-control-feedback"></span>
+        <input type="text" class="form-control" placeholder="Search">
+    </div>
+    <br>
     <div class="tab-pane fade show active" id="challenges" role="tabpanel" aria-labelledby="home-tab">
         <div style="background-color: white;">
             <br>
@@ -115,7 +120,7 @@
                         start of their symptoms using a sample, other than a nasopharyngeal swab, with a rapid
                         single-use home testing kit analogous to a home pregnancy test.</p>
                     <br>
-                
+
                     <br>
                     <div class="d-flex pull-right">
                         <!-- <div class="bottom"> -->
@@ -140,14 +145,15 @@
                             Tiles</a></h4>
                     <p class="desc">The challenge we are facing is global and departmental. Globally, there is an
                         accumulation of plastic with the equivalent of one tonne per person in existence. Considering
-                        that less than 9% of the plastic produced between 1950 and 2015 was recycled, we are challenged to find ways to recycle plastics much more
+                        that less than 9% of the plastic produced between 1950 and 2015 was recycled, we are challenged
+                        to find ways to recycle plastics much more
                         than is currently being done. Departmentally, we are challenged to procure goods and services
                         that reduce emissions intensity.
 
                         With a 10 year renovation underway of one on our buildings, we are seeking building products
                         that are more sustainable.</p>
                     <br>
-        
+
                     <br>
                     <div class="d-flex pull-right">
                         <!-- <div class="bottom"> -->
@@ -162,6 +168,17 @@
                 </div>
             </div>
             <br>
+            <div class="d-flex justify-content-center" style="font-size: 1rem;">
+                <nav aria-label="page-navigator">
+                    <ul class="pagination">
+                        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                    </ul>
+                </nav>
+                </div>
             <br>
             <br>
         </div>
@@ -176,10 +193,12 @@
                                     src="../../assets/images/challenge1.png"></a></div>
                     </div>
                     <div class="col-md-8" style="padding: 10px; color: #585858">
-                        <h4 class="subtitle"><a class="name-link" href="/challenge-details">COVID-19 Challenge - Low-cost
+                        <h4 class="subtitle"><a class="name-link" href="/challenge-details">COVID-19 Challenge -
+                                Low-cost
                                 monitoring system for COVID-19 patients</a></h4>
                         <p style="color: green"></p>
-                        <p class="desc">NRC is seeking a low cost system (unit cost &lt;$25) that can continuously measure
+                        <p class="desc">NRC is seeking a low cost system (unit cost &lt;$25) that can continuously
+                            measure
                             temperature, peripheral capillary oxygen saturation (SpO2), blood pressure (BP), pulse and
                             respiration rates, and transmit this information wirelessly to a base station for COVID-19
                             patient monitoring in locales including ERs, general wards, communities and homes.</p>
@@ -207,14 +226,16 @@
                                     src="../../assets/images/challenge2.png"></a></div>
                     </div>
                     <div class="col-md-8" style="padding: 10px; color: #585858">
-                        <h4 class="subtitle"><a class="name-link" href="/challenge-details">COVID-19 Challenge - Point of
+                        <h4 class="subtitle"><a class="name-link" href="/challenge-details">COVID-19 Challenge - Point
+                                of
                                 Care & Home Diagnostic Kit for COVID-19</a></h4>
-                        <p class="desc">The Public Health Agency of Canada (PHAC) and National Research Council (NRC) are
+                        <p class="desc">The Public Health Agency of Canada (PHAC) and National Research Council (NRC)
+                            are
                             seeking a solution that will diagnose individuals affected by COVID-19 within 3 days of the
                             start of their symptoms using a sample, other than a nasopharyngeal swab, with a rapid
                             single-use home testing kit analogous to a home pregnancy test.</p>
                         <br>
-                    
+
                         <br>
                         <div class="d-flex pull-right">
                             <!-- <div class="bottom"> -->
@@ -238,15 +259,18 @@
                         <h4 class="subtitle"><a class="name-link" href="/challenge-details">Recycled Plastic Ceiling
                                 Tiles</a></h4>
                         <p class="desc">The challenge we are facing is global and departmental. Globally, there is an
-                            accumulation of plastic with the equivalent of one tonne per person in existence. Considering
-                            that less than 9% of the plastic produced between 1950 and 2015 was recycled, we are challenged to find ways to recycle plastics much more
-                            than is currently being done. Departmentally, we are challenged to procure goods and services
+                            accumulation of plastic with the equivalent of one tonne per person in existence.
+                            Considering
+                            that less than 9% of the plastic produced between 1950 and 2015 was recycled, we are
+                            challenged to find ways to recycle plastics much more
+                            than is currently being done. Departmentally, we are challenged to procure goods and
+                            services
                             that reduce emissions intensity.
-    
+
                             With a 10 year renovation underway of one on our buildings, we are seeking building products
                             that are more sustainable.</p>
                         <br>
-            
+
                         <br>
                         <div class="d-flex pull-right">
                             <!-- <div class="bottom"> -->
@@ -261,6 +285,29 @@
                     </div>
                 </div>
                 <br>
+                <div class="d-flex justify-content-center" style="font-size: 1rem;">
+                    <nav aria-label="page-navigator">
+                        <ul class="pagination">
+                            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <br>
+                <div class="d-flex justify-content-center" style="font-size: 1rem;">
+                    <nav aria-label="page-navigator">
+                        <ul class="pagination">
+                            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                        </ul>
+                    </nav>
+                    </div>
                 <br>
                 <br>
             </div>
@@ -276,10 +323,12 @@
                                     src="../../assets/images/challenge1.png"></a></div>
                     </div>
                     <div class="col-md-8" style="padding: 10px; color: #585858">
-                        <h4 class="subtitle"><a class="name-link" href="/challenge-details">COVID-19 Challenge - Low-cost
+                        <h4 class="subtitle"><a class="name-link" href="/challenge-details">COVID-19 Challenge -
+                                Low-cost
                                 monitoring system for COVID-19 patients</a></h4>
                         <p style="color: green"></p>
-                        <p class="desc">NRC is seeking a low cost system (unit cost &lt;$25) that can continuously measure
+                        <p class="desc">NRC is seeking a low cost system (unit cost &lt;$25) that can continuously
+                            measure
                             temperature, peripheral capillary oxygen saturation (SpO2), blood pressure (BP), pulse and
                             respiration rates, and transmit this information wirelessly to a base station for COVID-19
                             patient monitoring in locales including ERs, general wards, communities and homes.</p>
@@ -307,14 +356,16 @@
                                     src="../../assets/images/challenge2.png"></a></div>
                     </div>
                     <div class="col-md-8" style="padding: 10px; color: #585858">
-                        <h4 class="subtitle"><a class="name-link" href="/challenge-details">COVID-19 Challenge - Point of
+                        <h4 class="subtitle"><a class="name-link" href="/challenge-details">COVID-19 Challenge - Point
+                                of
                                 Care & Home Diagnostic Kit for COVID-19</a></h4>
-                        <p class="desc">The Public Health Agency of Canada (PHAC) and National Research Council (NRC) are
+                        <p class="desc">The Public Health Agency of Canada (PHAC) and National Research Council (NRC)
+                            are
                             seeking a solution that will diagnose individuals affected by COVID-19 within 3 days of the
                             start of their symptoms using a sample, other than a nasopharyngeal swab, with a rapid
                             single-use home testing kit analogous to a home pregnancy test.</p>
                         <br>
-                    
+
                         <br>
                         <div class="d-flex pull-right">
                             <!-- <div class="bottom"> -->
@@ -338,15 +389,18 @@
                         <h4 class="subtitle"><a class="name-link" href="/challenge-details">Recycled Plastic Ceiling
                                 Tiles</a></h4>
                         <p class="desc">The challenge we are facing is global and departmental. Globally, there is an
-                            accumulation of plastic with the equivalent of one tonne per person in existence. Considering
-                            that less than 9% of the plastic produced between 1950 and 2015 was recycled, we are challenged to find ways to recycle plastics much more
-                            than is currently being done. Departmentally, we are challenged to procure goods and services
+                            accumulation of plastic with the equivalent of one tonne per person in existence.
+                            Considering
+                            that less than 9% of the plastic produced between 1950 and 2015 was recycled, we are
+                            challenged to find ways to recycle plastics much more
+                            than is currently being done. Departmentally, we are challenged to procure goods and
+                            services
                             that reduce emissions intensity.
-    
+
                             With a 10 year renovation underway of one on our buildings, we are seeking building products
                             that are more sustainable.</p>
                         <br>
-            
+
                         <br>
                         <div class="d-flex pull-right">
                             <!-- <div class="bottom"> -->
@@ -361,11 +415,24 @@
                     </div>
                 </div>
                 <br>
+                <div class="d-flex justify-content-center" style="font-size: 1rem;">
+                    <nav aria-label="page-navigator">
+                        <ul class="pagination">
+                            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                        </ul>
+                    </nav>
+                    </div>
                 <br>
                 <br>
             </div>
         </div>
     </div>
 </div>
-
+<br>
+<br>
+<br>
 </html>
