--- a/src/styles.css
+++ b/src/styles.css
@@ -10,8 +10,10 @@ h2{
     font-family: 'Poppins', sans-serif;
 }
 
-body{
+html, body{
     background-color: whitesmoke;
+    height: auto;
+    padding-bottom: 20px;
 }
 
 
