--- a/src/app/challenge-details/challenge-details.component.html
+++ b/src/app/challenge-details/challenge-details.component.html
@@ -407,7 +407,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane fade" id="discussion" role="tabpanel" aria-labelledby="invprojects-tab">
+                    <div class="tab-pane fade" id="discussions" role="tabpanel" aria-labelledby="invprojects-tab">
+                        <div class="form-group has-search">
+                            <span class="fform-control-feedback"></span>
+                            <input type="text" class="form-control" placeholder="Leave a comment">
+                          </div>
+                          <img style="max-width: 100%" src="../../assets/images/chat.png">
                     </div>
                     <div class="tab-pane fade" id="submissions" role="tabpanel" aria-labelledby="invprojects-tab">
                         <div class="d-flex justify-content-center">
@@ -416,8 +421,11 @@
                     </div>
                     <div class="tab-pane fade" id="members" role="tabpanel" aria-labelledby="invprojects-tab">
                         <p class="subtitle-med">Admins and Moderators</p>
+                        <img style="max-width: 30%;" src="../../assets/images/member.png">
                         <hr>
                         <p class="subtitle-med">General Members</p>
+                        <img style="max-width: 30%;" src="../../assets/images/member.png">
+
                     </div>
                 </div>
             </div>
